# orderbook-engine

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  bench_book_side.py  harness.py  workload.py
docs/: DESIGN.md  PERFORMANCE.md  REQUIREMENTS.md
docs/perf/: book_side_linux.json
src/orderbook/: __init__.py  book.py  book_side.py  types.py
tests/: test_book_side.py  test_cancel.py  test_differential.py  test_market.py  test_matching.py  test_modify.py  test_reporting.py  test_smoke.py  test_types.py  test_validation.py
