[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orderbook-engine"
version = "0.1.0"
description = "An in-memory limit order book matching engine with price-time priority and pluggable book-side backends."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Shreyas Sinha" }]
keywords = ["order-book", "matching-engine", "hft", "market-microstructure", "trading"]
dependencies = [
    "sortedcontainers>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orderbook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
